# maschine-rs

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
src/: colour.rs  controller.rs  display.rs  error.rs  events.rs  lib.rs
src/devices/: maschine_mikro_mk2.rs  mod.rs
src/fonts/: mod.rs  nx5.rs  nx6.rs
tools/: .gitattributes  Cargo.toml  translate.rs
tools/src/: bitmap.rs  font-gen.rs
